models and controllers setup

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Hello world!</h1>
+<h1>Below you can view all students for this cohort!</h1>
+<%@users.each do |user| %>
+<%=user.name %>
+<%end%>
